# zkrune

./: .env.example  .gitignore  CEREMONY.md  CIRCOM_SETUP.md  COMPILE_GUIDE.md  NEXT_STEPS.md  README.md  REAL_PROOF_EVIDENCE.json  SECURITY.md  SOLANA_DEPLOYMENT.md  SUPABASE_SETUP.md  VERIFICATION.md  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  test-new-circuits.js  test-zk-script.js  tsconfig.json  tsconfig.scripts.json  vercel.json  verify-real-test.js  vitest.config.ts
__tests__/: auth.test.ts  ceremonyAuth.test.ts  circuit-e2e.test.ts  circuit-fixes-day2.test.ts  circuit-fixes.test.ts  circuits.test.ts  converter.test.ts  phase3-integration.test.ts  schema.test.ts
app/: globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx
ceremony/: CEREMONY_REPORT.md  beacon.txt  state.json
components/: AnonymousReputationForm.tsx  BalanceProofForm.tsx  BaseVerifier.tsx  CTAShowcase.tsx  ClientWalletProvider.tsx  CodePreview.tsx  ComparisonTable.tsx  CopyContractAddress.tsx  CredentialProofForm.tsx  EducationalBanner.tsx  ErrorBoundary.tsx  ErrorBoundaryWrapper.tsx  FAQ.tsx  FirstProofSection.tsx  FirstTimeSetupPrompt.tsx  HashPreimageForm.tsx  HowItWorks.tsx  InstallPrompt.tsx  InteractiveHeroDemo.tsx  LoadingSkeleton.tsx  LoadingStates.tsx  MembershipProofForm.tsx  NFTOwnershipForm.tsx  Navigation.tsx  PatienceProofForm.tsx  ProofAssistant.tsx  ProofExport.tsx  QuadraticVotingForm.tsx  RangeProofForm.tsx  RuneAnimation.tsx  SignatureVerificationForm.tsx  SolanaVerifier.tsx  StepIcons.tsx  StructuredData.tsx  SuccessCelebration.tsx  SuiVerifier.tsx  TemplateGallery.tsx  TemplateIcons.tsx  Testimonials.tsx  TokenStatsBanner.tsx  (+10 more)
docs/: TRUST_MODEL.md  WIDGET_INTEGRATION.md  marketing-x-posts.md
e2e/: proof-flow.spec.ts
evm-verifier/: .env.example  .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
lib/: analytics.ts  circuitGenerator.ts  circuitTemplates.ts  clientZkProof.ts  compactSerializer.ts  env.ts  imageOptimization.ts  integrations.ts  merkle.ts  performance.ts  seo.ts  snarkjs.d.ts  trustLevel.ts  utils.ts  validation.ts  whaleTokens.ts  zkProof.ts
public/: example_real_proof.json  robots.txt  sitemap.xml  snapshot-meta.json  snapshot.json  sw.js  test-offline.html  zkrune-widget.js
scripts/: ceremony.sh  compile-circuits.sh  compile-final-circuits.sh  compile-new-circuits.sh  compile-whale-holder.sh  fix-stale-inputs.mjs  parse_vk_light.js  snapshot-holders.ts
solana-groth16-verifier/: Cargo.toml  idl.json
solana-groth16-verifier/src/: generated_vk.rs  lib.rs  light_vk.rs
solana-staking-program/programs/solana-staking-program/: Cargo.toml
solana-staking-program/programs/solana-staking-program/src/: errors.rs  lib.rs  state.rs
solana-staking-program/programs/solana-staking-program/src/instructions/: claim.rs  deposit_rewards.rs  initialize.rs  mod.rs  stake.rs  unstake.rs
solana_verifier/: Anchor.toml  Cargo.toml
solana_verifier/programs/solana_verifier/: Cargo.toml
solana_verifier/programs/solana_verifier/src/: groth16.rs  lib.rs
solana_verifier/tests/: solana_verifier.ts
(+293 files in other folders)
