[package]
name = "solana-groth16-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "~1.18"
borsh = "0.10.3"
groth16-solana = "0.0.3"

# [dev-dependencies]
# Temporarily disabled to avoid indexmap version conflicts
# solana-program-test = "~1.18"
# solana-sdk = "~1.18"

[patch.crates-io]
# Force compatible version with Solana Rust 1.79  
indexmap = { git = "https://github.com/indexmap-rs/indexmap", tag = "2.2.6" }
