[workspace]
members = [
    "programs/*"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
# Force ahash 0.8.x to use 0.7.8 to avoid stdsimd feature error
ahash = { git = "https://github.com/tkaitchuck/aHash", tag = "v0.7.8" }
