[package]
name = "zkrune-staking"
version = "0.1.0"
description = "zkRune On-Chain Staking Program with fee sharing rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zkrune_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
blake3 = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
