[package]
name = "solana_verifier"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0" }
solana-program = { version = "=1.16.27" }
# Pin these as dependencies
getrandom = { version = "=0.2.12", features = ["custom"] }
jobserver = "=0.1.32"
